deployment/wes-tes/wes/ingress-wes.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: wes
spec:
  rules:
  - host: wes-tes-example.tsi.ebi.ac.uk
    http:
      paths:
      - backend:
          serviceName: wes-elixir
          servicePort: 8888
        path: /
  tls:
  - hosts:
    - wes-tes-example.tsi.ebi.ac.uk
    secretName: tls-prod-cert
